# smartlearn

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  database.dbml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  __init__.py  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/core/: __init__.py  deps.py  security.py
backend/app/models/: __init__.py  content.py  enums.py  interaction.py  quiz.py  user.py
backend/app/routers/: __init__.py  auth.py  bookmark.py  dashboard.py  exam.py  library.py  me.py  progress.py  review.py  study.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  document.py  interaction.py  preferences.py  progress.py  quiz.py  review.py  topic.py  user.py
backend/app/services/: __init__.py  ai_document_parsing.py  document_processing.py  email.py  question_generation.py
backend/scripts/: __init__.py  reset_password.py
docs/: BaoCaoTienDo_Lan2.txt  BaoCaoTienDo_Lan2_Hung.txt  BaoCaoTienDo_Lan4.txt
frontend/: DESIGN.md  Dockerfile  eslint.config.js  index.html  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  axios.js  bookmarks.js  dashboard.js  document.js  exam.js  library.js  me.js  progress.js  review.js  study.js
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: AppLayout.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/lib/: utils.js
frontend/src/mocks/: bookmarks.js  documents.js  exams.js  index.js  questions.js  sessions.js  users.js
frontend/src/models/: enums.js  (+2 more)
(+21 files in other folders)
